--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - name: Posts
   link: /
 - name: About Me
-  link: /about
+  link: /about.html
 - name: Tags
-  link: /tags
+  link: /tags.html
 - name: Categories
-  link: /categories
+  link: /categories.html
