--- a/package.json
+++ b/package.json
@@ -18,5 +18,16 @@
   "homepage": "https://github.com/bschenerman/personal-blog-jekyll#readme",
   "dependencies": {
     "eslint": "^5.15.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-fontmin": "^0.7.4",
+    "gulp-uglify": "^3.0.2",
+    "gulp-uglifycss": "^1.1.0"
   }
 }
