🐛 Fix site.url bug

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 permalink:  /:year/:month/:day/:title:output_ext
 excerpt_separator:  "<!--more-->"
-# url: http://dev.benschenerman.com/
+url: http://benschenerman.com/blog/
